syntax = "proto3";

package account;

option go_package = "./proto/api";

import "platform/platform.proto";

//  Дополнительные сведения для операции
message OperationDetails {
  string acc_uuid = 1;  //  UUID счёта
  float additional_data = 2;  //  Дополнительные данные
}

//  Данные event-а
message EventData{
  string saga_uuid = 1;                         //  UUID sag-и
  string event_uuid = 2;                        //  UUID evnet-a
  string operation_name = 3;                    // Тип операции
  oneof data{
    platform.AccountDetails account_data = 4;   //  Реквизиты счёта
    OperationDetails additional_info = 5;       //  Дополнительная информация по операции
  }
}

//  Результат event-а
message EventStatus{
  string saga_uuid = 1;                     //  UUID sag-и
  string event_uuid = 2;                    //  UUID evnet-a
  string operation_name = 3;                //  Тип выполняемой операции
  oneof result{
    string info = 4;                        //  Дополнительная информация по event-у
    platform.FullAccountData acc_data = 5;  //  Данные счета
  }
}

message EventError{
  string saga_uuid = 1;                     //  UUID sag-и
  string event_uuid = 2;                    //  UUID evnet-a
  string operation_name = 3;                //  Тип выполняемой операции
  uint32 status = 4;                        //  Event error status
  string info = 5;                          //  Дополнительная информация по event-у
}